manifests/demo-sms-vault-sec/bk_db_node_svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-sms-db
  name: demo-sms-db-extenal
  namespace: demo-sms-api
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
    nodePort: 32111
  selector:
    app: demo-sms-db
  type: NodePort
status:
  loadBalancer: {}
